HISTORY
=======
Main changes

[horizontal]

*2012/07/10*:: Add automatic test in tests

*2012/06/22*:: Add versioning, statement "assign" and handling of timeout on
select in tcpchat V2.2

*2012/06/20*:: Add option -p (--progress) for progress bar in xml_checker V17.0

*2012/05/10*:: Add Shift with keys arrows and pages

*2012/04/19*:: Add Limited_Pool

*2012/03/30*:: Add tcpipe

*2012/03/30*:: Ensure that exception Invalid_Pcre_Version is properly raised
in Xml_Parser V29.6

*2012/01/09*:: Add support for XML namespace in in Xml_Parser V29.3, Xml_parser.Generator V10.0 and
xml_checker V16.1

*2012/01/05*:: Handle Dtd for strings similarly as for files in Xml_Parser V28.0

*2012/01/04*:: Add keep local doctype definition even if a dtd file is provided in Xml_Parser V27.4
+
Fix output when some prologue when no xml directive in Xml_parser.Generator
V9.3

*2012/01/04*:: Fix "<!INCLUDE[" (with no separators after INCLUDE)
+
Fix imbricated INCLUDE directives
+
Fix detection of multiple NOTATION attributes, in Xml_Parser V27.3

*2012/01/04*:: Fix handling of FIXED attributes in Xml_Parser V27.2

*2012/01/03*:: Support empty DTD file (stdin) in Xml_Parser V27.1

*2012/01/02*:: Add allow retrieving unparsed entities after parsing with callback in Xml_Parser V27.0, 
Xml_parser.Generator V9.2 and xml_checker V15.2

*2011/12/30*:: Chg major documentations into txt format for asciidoc

*2011/11/28*:: Add normalization of reals

*2011/10/31*:: Big change: Con_Io provides objects Console and Window

*2011/10/19*:: Remove Lf between outputs of grep mode when not default and multiple regex in asubst, V13.0

*2011/10/18*:: Add support of mouse in sokoban menu

*2011/10/11*:: Keep DTD even if no expand, in Xml_Parser V26.9

*2011/10/05*:: Don't change DTD file path when it is explicitly provided, in Xml_Parser V26.8

*2011/10/04*:: Add env variable for configuration file of agite, V3.7
+
Add viewing of files in the commit where they are deleted in agite, V3.6
