@@ -4,6 +4,8 @@ Main changes
 
 [horizontal]
 
+*2012/07/24*:: Add options -O (--others) and --no_names to als V8.0
+
 *2012/07/10*:: Add automatic test in tests
 
 *2012/06/22*:: Add versioning, statement "assign" and handling of timeout on
